src/components/NavHeader/NavHeader.module.css
/* /////////////////////////////////////////////////////////////////////////////
MOBILE
//////////////////////////////////////////////////////////////////////////////*/

.navclickarea {
  position: absolute;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.3);
  height: 100vh;
  display: none;
  transition: all 250ms ease-in-out;
}

.navclickarea.open {
  display: block;
  opacity: 1;
}

.navheader {
  position: fixed;
  width: 100%;
  height: 65px;
}

.navlistbg {
  position: absolute;
  top: 65px;
  transition: all 250ms ease-in-out;
  background-color: var(--col1_7);
  width: 100%;
  height: 0;
}

.navlistbg.open {
  height: 250px;
}

.bar {
  height: 65px;
  background: var(--grad_1);
  background-color: #E2F2F3;
  transition: all 250ms ease-in-out;
}

.bar.open {
  background: var(--col1_7);
}

.icon {
  position: absolute;
  left: 0;
  height: 37px;
  width: 37px;
  margin: 14px 18px;
}

/* Ham */
.hamarea {
  height: 65px;
  width: 70px;
  float: right;
}

.ham {
  position: relative;
  display: flex;
  align-items: center;
  margin: 31.5px 20px; /* (65-2)/2 = 31.5 */
  right: 0;
}

.ham,
.ham::before,
.ham::after {
  position: absolute;
  display: block;
  background-color: var(--col2_1);
  height: 2px;
  width: 2em;
  transition: transform ease-in-out 250ms;
}

.ham::before,
.ham::after {
  content: " ";
}

.ham::before {
  bottom: 9px;
}

.ham::after {
  top: 9px;
}

/* Cross */
.ham.cross {
  transform: rotate(-135deg);
}

.ham.cross::before {
  bottom: 0;
  transform: rotate(90deg);
}

.ham.cross::after {
  top: 0;
  transform: rotate(90deg);
}

/* Links */
.anchor {
  cursor: pointer;
  font-size: 19px;
  font-weight: 500;
  text-transform: uppercase;
  color: var(--col2_1);
  display: block;
  width: 100%;
  padding: 15px 0 15px 20px;
}

.anchor:global(.active) {  /* global prevents active class from being modified when rendered by css modules */
  color: var(--col2_3);
}

.linklist {
  list-style: none;
}

.link {
  position: relative;
}

.link::after {
  content: ' ';
  position: absolute;
  height: 2px;
  width: 50vw;
  bottom: 0;
  left: 0;
  background-color: var(--col1_1);
  opacity: 0.1;
}

.nav {
  padding: 15px 0 20px 0;
  position: absolute;
  text-align: left;
  left: -100%;
  width: 100%;
  transform: scale(1, 0.5);
  transform-origin: top;
  opacity: 0;
  transition: all 200ms ease-in-out;
}

.nav.open {
  left: 0;
  opacity: 1;
  transform: scale(1, 1);
}

.frontarrow {
  position: absolute;
  left: 45vw;
  top: 50%;
  transform: translateY(-60%);
  height: 0;
  width: 0;
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent; 
  border-left: 7px solid var(--col1_2);
  border-right: 7px solid transparent;
  pointer-events: none;
}

.backarrow {
  position: absolute;
  left: 43vw;
  top: 50%;
  transform: translateY(-60%);
  height: 0;
  width: 0;
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent; 
  border-right: 7px solid var(--col1_2);
  border-left: 7px solid transparent;
  pointer-events: none;
}

/* /////////////////////////////////////////////////////////////////////////////
DESKTOP
//////////////////////////////////////////////////////////////////////////////*/

@media screen and (min-width: 768px)  {
  .navclickarea.open {
    display: none;
  }

  .navlistbg {
    top: 0;
  }

  .icon {
    margin: 14px 40px;
  }

  .ham {
    display: none;
  }

  .hamarea {
    display: none;
  }

  .linklist {
    height: 45px;
    margin: 10px 50px;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
  }

  .link {
    margin: 10px 20px;
  }

  .anchor {
    padding: 0;
  }
  
  .anchor:hover {
    color: var(--col2_2);
  }

  .link::after {
    top: 2em;
    height: 3px;
    width: 100%;
    background-color: var(--col_2_1);
    opacity: 1;
    transform: scale(0, 1.5);
    transition: all 200ms ease-in-out;
    transform-origin: left;
  }

  .link:hover::after {
    display: block;
    height: 3px;
    width: 100%;
    background-color: var(--col1_2);
    transform: scale(1, 1);
  }

  .nav {
    top: 0;
    left: 0;
    opacity: 1;
    transform: scale(1, 1);
    padding: 0;
    background-color: transparent;
  }

  .frontarrow {
    display: none;
  }
  
  .backarrow {
    display: none;
  }
}

